<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context="com.example.android.cryptomorse.HomePage">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/words"
        android:layout_margin="10dp"
        android:textColor="#ff0000"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/wordTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/type_or_paste_your_text_here"
        android:textColorHint="#f7eded"
        android:textSize="25sp"
        android:textColor="#ffee00"
        android:layout_margin="8dp"
        android:inputType="textMultiLine"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_to_morse"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:onClick="wordsToMorse"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/morse_code"
        android:layout_margin="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ff0000"
        />
    <EditText
        android:id="@+id/morseTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/type_or_paste_your_code_here"
        android:textColorHint="#f7eded"
        android:textSize="25sp"
        android:textColor="#ffee00"
        android:layout_margin="8dp"
        android:inputType="textMultiLine"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_to_words"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:onClick="morseToWord"/>
</LinearLayout>